--- a/style.css
+++ b/style.css
@@ -3,16 +3,20 @@ html {
   width: 100%;
   height: 100%;
   font-family: 'Montserrat', sans-serif;
-  background: url(header.jpg) no-repeat center center fixed; 
+  background: url(background.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 
+header {
+	padding-top: 3em;
+}
+
 h1 {
 	font-size: 3rem;
-	color: #e2dbdb;
+	color: #FFFCFC;
 }
 
 hr {
@@ -22,7 +26,7 @@ hr {
 }
 
 .buffer {
-	height: 10rem;
+	height: 4rem;
 }
 
 .btn {
@@ -46,4 +50,26 @@ hr {
 	padding: 1rem 2rem;
 }
 
-ru
+.carousel-indicators {
+	top: 33rem;
+  	justify-content:flex-center;
+  	margin:0;
+  	
+}
+ 
+.carousel-inner {
+width: 100%; /* use this, or not */
+
+margin: auto;
+}
+
+.card {
+	width: 18rem;
+	height: 500px;
+	margin: auto;
+}
+
+.card > img {
+	max-height: 200px;
+
+}
