--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ header {
 	padding-top: 3em;
 }
 
+.loveh {
+	font-size: 6rem;
+}
+
 h1 {
 	font-size: 3rem;
 	color: #FFFCFC;
@@ -23,6 +27,18 @@ hr {
 	border-color: #F05F44;
 	border-width: 3px;
 	max-width: 65px;
+}
+
+
+.heart {
+	display: flex;
+	
+}
+
+.heart > img{
+	max-width: 50%;
+	height: auto;
+	margin: auto;
 }
 
 .buffer {
